Fix summarize sidebar bucket label not visible when selected

--- a/frontend/src/metabase/query_builder/components/view/sidebars/SummarizeSidebar/BreakoutColumnList/BreakoutColumnListItem/BreakoutColumnListItem.module.css
+++ b/frontend/src/metabase/query_builder/components/view/sidebars/SummarizeSidebar/BreakoutColumnList/BreakoutColumnListItem/BreakoutColumnListItem.module.css
@@ -60,6 +60,7 @@
     }
 
     .BucketTriggerButton {
+      visibility: visible;
       opacity: 1;
       color: color-mix(in srgb, var(--mb-color-text-white), transparent 35%);
 
